2000-06-19  Michael Yount  <csf@moscow.com>
	* bin/mj_wwwadm:  Clarify help page.
	Allow multiple tokens to be processed at once.
	Allow multiple addresses to be unsubscribed/unregistered at once.

2000-06-18  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MailOut.pm (handle_bounce_user): Now provide per-user
	bounce statistics and recommend that users be removed.

	* lib/Mj/List.pm (expire_subscriber_data): Also expire old bounce
	entries.
	(bounce_get): New function: retrieve parsed bounce data.
	(bounce_add): New function: add an event to an address' bounce
	data and return the parsed data.
	(_bounce_parse_data): New private function: parse a set of bounce
	data.
	(bounce_gen_stats): Generate statistics from a set of bounce data.

	* lib/Majordomo.pm (trigger): expire_vacation renamed to
	expire_subscriber_data.

2000-06-18  Michael Yount  <csf@moscow.com>
	* lib/Mj/Access.pm, lib/Mj/Resend.pm, lib/Mj/Token.pm:
	Prevent race condition when queue file is attached
	to consult message, by spooling file before list_access_check()
	is called in Mj::Resend::post().  Remove "unspooled_file"
	variable.

2000-06-15  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Bf/Parser.pm (parse_compuserve): New function to parse
	Compuserve bounces.

	* misc/parsebounce.pl: Collect better statistics about what bounce
	formats were seen.

2000-06-15  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MailOut.pm (handle_bounce): Pull per-user bounce handling
	out into handle_bounce_user.
	(handle_bounce_user): New function.

2000-06-14  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/SubscriberList.pm: Add 'bounce' as a field.

2000-06-14  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Bf/Parser.pm (parse_postfix): Fix failure ID line.

	* lib/Mj/MailOut.pm (handle_bounce): Fix busted setting of
        $parser->output_dir.

	* lib/Bf/Parser.pm (parse_qmail): Fold parse_yahoo in; the bounce
	formats are very similar.